Calabi-Baldini-Grabocka_LEGO-compiler/y.output
Grammar

    0 $accept: line $end

    1 line: stmt '\n'
    2     | stmt line

    3 stmt: EXIT
    4     | SWITCH GRID GVAR
    5     | GVAR '=' GRID '(' NUM ',' NUM ')'
    6     | VAR '=' TYPE '(' NUM ',' NUM ')'
    7     | PLACE VAR AT '(' NUM ',' NUM ')'
    8     | SHOW GVAR
    9     | MOVE mopt
   10     | ROTATE VAR
   11     | HEIGHT hopt
   12     | DELETE dopt
   13     | FITS VAR AT '(' NUM ',' NUM ')'
   14     | IF FITS VAR AT '(' NUM ',' NUM ')' THEN PLACE
   15     | IF FITS VAR AT '(' NUM ',' NUM ')' THEN MOVE
   16     | WHILE POSSIBLE ':' MOVE VAR DIR NUM

   17 mopt: VAR DIR NUM
   18     | VAR AT '(' NUM ',' NUM ')'

   19 hopt: '(' NUM ',' NUM ')'
   20     | VAR

   21 dopt: VAR
   22     | ALL
   23     | GRID GVAR


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1
'(' (40) 5 6 7 13 14 15 18 19
')' (41) 5 6 7 13 14 15 18 19
',' (44) 5 6 7 13 14 15 18 19
':' (58) 16
'=' (61) 5 6
error (256)
NUM (258) 5 6 7 13 14 15 16 17 18 19
DIR (259) 16 17
TYPE (260) 6
VAR (261) 6 7 10 13 14 15 16 17 18 20 21
GVAR (262) 4 5 8 23
SHOW (263) 8
EXIT (264) 3
SWITCH (265) 4
ROTATE (266) 10
POSSIBLE (267) 16
WHILE (268) 16
GRID (269) 4 5 23
HEIGHT (270) 11
FITS (271) 13 14 15
PLACE (272) 7 14
DELETE (273) 12
ALL (274) 22
IF (275) 14 15
THEN (276) 14 15
MOVE (277) 9 15 16
AT (278) 7 13 14 15 18


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
line (31)
    on left: 1 2, on right: 0 2
stmt (32)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16, on right: 1 2
mopt (33)
    on left: 17 18, on right: 9
hopt (34)
    on left: 19 20, on right: 11
dopt (35)
    on left: 21 22 23, on right: 12


State 0

    0 $accept: . line $end

    VAR     shift, and go to state 1
    GVAR    shift, and go to state 2
    SHOW    shift, and go to state 3
    EXIT    shift, and go to state 4
    SWITCH  shift, and go to state 5
    ROTATE  shift, and go to state 6
    WHILE   shift, and go to state 7
    HEIGHT  shift, and go to state 8
    FITS    shift, and go to state 9
    PLACE   shift, and go to state 10
    DELETE  shift, and go to state 11
    IF      shift, and go to state 12
    MOVE    shift, and go to state 13

    line  go to state 14
    stmt  go to state 15


State 1

    6 stmt: VAR . '=' TYPE '(' NUM ',' NUM ')'

    '='  shift, and go to state 16


State 2

    5 stmt: GVAR . '=' GRID '(' NUM ',' NUM ')'

    '='  shift, and go to state 17


State 3

    8 stmt: SHOW . GVAR

    GVAR  shift, and go to state 18


State 4

    3 stmt: EXIT .

    $default  reduce using rule 3 (stmt)


State 5

    4 stmt: SWITCH . GRID GVAR

    GRID  shift, and go to state 19


State 6

   10 stmt: ROTATE . VAR

    VAR  shift, and go to state 20


State 7

   16 stmt: WHILE . POSSIBLE ':' MOVE VAR DIR NUM

    POSSIBLE  shift, and go to state 21


State 8

   11 stmt: HEIGHT . hopt

    VAR  shift, and go to state 22
    '('  shift, and go to state 23

    hopt  go to state 24


State 9

   13 stmt: FITS . VAR AT '(' NUM ',' NUM ')'

    VAR  shift, and go to state 25


State 10

    7 stmt: PLACE . VAR AT '(' NUM ',' NUM ')'

    VAR  shift, and go to state 26


State 11

   12 stmt: DELETE . dopt

    VAR   shift, and go to state 27
    GRID  shift, and go to state 28
    ALL   shift, and go to state 29

    dopt  go to state 30


State 12

   14 stmt: IF . FITS VAR AT '(' NUM ',' NUM ')' THEN PLACE
   15     | IF . FITS VAR AT '(' NUM ',' NUM ')' THEN MOVE

    FITS  shift, and go to state 31


State 13

    9 stmt: MOVE . mopt

    VAR  shift, and go to state 32

    mopt  go to state 33


State 14

    0 $accept: line . $end

    $end  shift, and go to state 34


State 15

    1 line: stmt . '\n'
    2     | stmt . line

    VAR     shift, and go to state 1
    GVAR    shift, and go to state 2
    SHOW    shift, and go to state 3
    EXIT    shift, and go to state 4
    SWITCH  shift, and go to state 5
    ROTATE  shift, and go to state 6
    WHILE   shift, and go to state 7
    HEIGHT  shift, and go to state 8
    FITS    shift, and go to state 9
    PLACE   shift, and go to state 10
    DELETE  shift, and go to state 11
    IF      shift, and go to state 12
    MOVE    shift, and go to state 13
    '\n'    shift, and go to state 35

    line  go to state 36
    stmt  go to state 15


State 16

    6 stmt: VAR '=' . TYPE '(' NUM ',' NUM ')'

    TYPE  shift, and go to state 37


State 17

    5 stmt: GVAR '=' . GRID '(' NUM ',' NUM ')'

    GRID  shift, and go to state 38


State 18

    8 stmt: SHOW GVAR .

    $default  reduce using rule 8 (stmt)


State 19

    4 stmt: SWITCH GRID . GVAR

    GVAR  shift, and go to state 39


State 20

   10 stmt: ROTATE VAR .

    $default  reduce using rule 10 (stmt)


State 21

   16 stmt: WHILE POSSIBLE . ':' MOVE VAR DIR NUM

    ':'  shift, and go to state 40


State 22

   20 hopt: VAR .

    $default  reduce using rule 20 (hopt)


State 23

   19 hopt: '(' . NUM ',' NUM ')'

    NUM  shift, and go to state 41


State 24

   11 stmt: HEIGHT hopt .

    $default  reduce using rule 11 (stmt)


State 25

   13 stmt: FITS VAR . AT '(' NUM ',' NUM ')'

    AT  shift, and go to state 42


State 26

    7 stmt: PLACE VAR . AT '(' NUM ',' NUM ')'

    AT  shift, and go to state 43


State 27

   21 dopt: VAR .

    $default  reduce using rule 21 (dopt)


State 28

   23 dopt: GRID . GVAR

    GVAR  shift, and go to state 44


State 29

   22 dopt: ALL .

    $default  reduce using rule 22 (dopt)


State 30

   12 stmt: DELETE dopt .

    $default  reduce using rule 12 (stmt)


State 31

   14 stmt: IF FITS . VAR AT '(' NUM ',' NUM ')' THEN PLACE
   15     | IF FITS . VAR AT '(' NUM ',' NUM ')' THEN MOVE

    VAR  shift, and go to state 45


State 32

   17 mopt: VAR . DIR NUM
   18     | VAR . AT '(' NUM ',' NUM ')'

    DIR  shift, and go to state 46
    AT   shift, and go to state 47


State 33

    9 stmt: MOVE mopt .

    $default  reduce using rule 9 (stmt)


State 34

    0 $accept: line $end .

    $default  accept


State 35

    1 line: stmt '\n' .

    $default  reduce using rule 1 (line)


State 36

    2 line: stmt line .

    $default  reduce using rule 2 (line)


State 37

    6 stmt: VAR '=' TYPE . '(' NUM ',' NUM ')'

    '('  shift, and go to state 48


State 38

    5 stmt: GVAR '=' GRID . '(' NUM ',' NUM ')'

    '('  shift, and go to state 49


State 39

    4 stmt: SWITCH GRID GVAR .

    $default  reduce using rule 4 (stmt)


State 40

   16 stmt: WHILE POSSIBLE ':' . MOVE VAR DIR NUM

    MOVE  shift, and go to state 50


State 41

   19 hopt: '(' NUM . ',' NUM ')'

    ','  shift, and go to state 51


State 42

   13 stmt: FITS VAR AT . '(' NUM ',' NUM ')'

    '('  shift, and go to state 52


State 43

    7 stmt: PLACE VAR AT . '(' NUM ',' NUM ')'

    '('  shift, and go to state 53


State 44

   23 dopt: GRID GVAR .

    $default  reduce using rule 23 (dopt)


State 45

   14 stmt: IF FITS VAR . AT '(' NUM ',' NUM ')' THEN PLACE
   15     | IF FITS VAR . AT '(' NUM ',' NUM ')' THEN MOVE

    AT  shift, and go to state 54


State 46

   17 mopt: VAR DIR . NUM

    NUM  shift, and go to state 55


State 47

   18 mopt: VAR AT . '(' NUM ',' NUM ')'

    '('  shift, and go to state 56


State 48

    6 stmt: VAR '=' TYPE '(' . NUM ',' NUM ')'

    NUM  shift, and go to state 57


State 49

    5 stmt: GVAR '=' GRID '(' . NUM ',' NUM ')'

    NUM  shift, and go to state 58


State 50

   16 stmt: WHILE POSSIBLE ':' MOVE . VAR DIR NUM

    VAR  shift, and go to state 59


State 51

   19 hopt: '(' NUM ',' . NUM ')'

    NUM  shift, and go to state 60


State 52

   13 stmt: FITS VAR AT '(' . NUM ',' NUM ')'

    NUM  shift, and go to state 61


State 53

    7 stmt: PLACE VAR AT '(' . NUM ',' NUM ')'

    NUM  shift, and go to state 62


State 54

   14 stmt: IF FITS VAR AT . '(' NUM ',' NUM ')' THEN PLACE
   15     | IF FITS VAR AT . '(' NUM ',' NUM ')' THEN MOVE

    '('  shift, and go to state 63


State 55

   17 mopt: VAR DIR NUM .

    $default  reduce using rule 17 (mopt)


State 56

   18 mopt: VAR AT '(' . NUM ',' NUM ')'

    NUM  shift, and go to state 64


State 57

    6 stmt: VAR '=' TYPE '(' NUM . ',' NUM ')'

    ','  shift, and go to state 65


State 58

    5 stmt: GVAR '=' GRID '(' NUM . ',' NUM ')'

    ','  shift, and go to state 66


State 59

   16 stmt: WHILE POSSIBLE ':' MOVE VAR . DIR NUM

    DIR  shift, and go to state 67


State 60

   19 hopt: '(' NUM ',' NUM . ')'

    ')'  shift, and go to state 68


State 61

   13 stmt: FITS VAR AT '(' NUM . ',' NUM ')'

    ','  shift, and go to state 69


State 62

    7 stmt: PLACE VAR AT '(' NUM . ',' NUM ')'

    ','  shift, and go to state 70


State 63

   14 stmt: IF FITS VAR AT '(' . NUM ',' NUM ')' THEN PLACE
   15     | IF FITS VAR AT '(' . NUM ',' NUM ')' THEN MOVE

    NUM  shift, and go to state 71


State 64

   18 mopt: VAR AT '(' NUM . ',' NUM ')'

    ','  shift, and go to state 72


State 65

    6 stmt: VAR '=' TYPE '(' NUM ',' . NUM ')'

    NUM  shift, and go to state 73


State 66

    5 stmt: GVAR '=' GRID '(' NUM ',' . NUM ')'

    NUM  shift, and go to state 74


State 67

   16 stmt: WHILE POSSIBLE ':' MOVE VAR DIR . NUM

    NUM  shift, and go to state 75


State 68

   19 hopt: '(' NUM ',' NUM ')' .

    $default  reduce using rule 19 (hopt)


State 69

   13 stmt: FITS VAR AT '(' NUM ',' . NUM ')'

    NUM  shift, and go to state 76


State 70

    7 stmt: PLACE VAR AT '(' NUM ',' . NUM ')'

    NUM  shift, and go to state 77


State 71

   14 stmt: IF FITS VAR AT '(' NUM . ',' NUM ')' THEN PLACE
   15     | IF FITS VAR AT '(' NUM . ',' NUM ')' THEN MOVE

    ','  shift, and go to state 78


State 72

   18 mopt: VAR AT '(' NUM ',' . NUM ')'

    NUM  shift, and go to state 79


State 73

    6 stmt: VAR '=' TYPE '(' NUM ',' NUM . ')'

    ')'  shift, and go to state 80


State 74

    5 stmt: GVAR '=' GRID '(' NUM ',' NUM . ')'

    ')'  shift, and go to state 81


State 75

   16 stmt: WHILE POSSIBLE ':' MOVE VAR DIR NUM .

    $default  reduce using rule 16 (stmt)


State 76

   13 stmt: FITS VAR AT '(' NUM ',' NUM . ')'

    ')'  shift, and go to state 82


State 77

    7 stmt: PLACE VAR AT '(' NUM ',' NUM . ')'

    ')'  shift, and go to state 83


State 78

   14 stmt: IF FITS VAR AT '(' NUM ',' . NUM ')' THEN PLACE
   15     | IF FITS VAR AT '(' NUM ',' . NUM ')' THEN MOVE

    NUM  shift, and go to state 84


State 79

   18 mopt: VAR AT '(' NUM ',' NUM . ')'

    ')'  shift, and go to state 85


State 80

    6 stmt: VAR '=' TYPE '(' NUM ',' NUM ')' .

    $default  reduce using rule 6 (stmt)


State 81

    5 stmt: GVAR '=' GRID '(' NUM ',' NUM ')' .

    $default  reduce using rule 5 (stmt)


State 82

   13 stmt: FITS VAR AT '(' NUM ',' NUM ')' .

    $default  reduce using rule 13 (stmt)


State 83

    7 stmt: PLACE VAR AT '(' NUM ',' NUM ')' .

    $default  reduce using rule 7 (stmt)


State 84

   14 stmt: IF FITS VAR AT '(' NUM ',' NUM . ')' THEN PLACE
   15     | IF FITS VAR AT '(' NUM ',' NUM . ')' THEN MOVE

    ')'  shift, and go to state 86


State 85

   18 mopt: VAR AT '(' NUM ',' NUM ')' .

    $default  reduce using rule 18 (mopt)


State 86

   14 stmt: IF FITS VAR AT '(' NUM ',' NUM ')' . THEN PLACE
   15     | IF FITS VAR AT '(' NUM ',' NUM ')' . THEN MOVE

    THEN  shift, and go to state 87


State 87

   14 stmt: IF FITS VAR AT '(' NUM ',' NUM ')' THEN . PLACE
   15     | IF FITS VAR AT '(' NUM ',' NUM ')' THEN . MOVE

    PLACE  shift, and go to state 88
    MOVE   shift, and go to state 89


State 88

   14 stmt: IF FITS VAR AT '(' NUM ',' NUM ')' THEN PLACE .

    $default  reduce using rule 14 (stmt)


State 89

   15 stmt: IF FITS VAR AT '(' NUM ',' NUM ')' THEN MOVE .

    $default  reduce using rule 15 (stmt)
